--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
                          alt=""
                     />
                </div>
+               <div class="error">
+                    <p>invalid city name</p>
+               </div>
                <div class="city-weather">
                     <img
+                         class="image_weather"
                          src="/images/cloud.png"
                          width="200px"
                          height="200px"
